[package]
name = "unaligned"
version = "0.1.0"
authors = ["Thalia Nero"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["unaligned", "move", "only", "cell", "storage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []

[dependencies]
scopeguard = "1.1"