[package]
name = "unaligned"
description = "A crate containing types for encapsulating unaligned values."
version = "0.1.0"
authors = ["Thalia Nero"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kvverti/unaligned"
keywords = ["unaligned", "move", "only", "cell", "storage"]
categories = ["no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []

[dependencies]
scopeguard = "1.1"